--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,9 +16,7 @@
             "preLaunchTask": "Cargo Build Examples (debug)",
             "runToEntryPoint": "main",
             "executable": "./target/thumbv7em-none-eabihf/debug/examples/${fileBasenameNoExtension}",
-            "armToolchainPath": "${userHome}/arm-gnu-toolchain/bin",
-            "runToMain": false,
-            "showDevDebugOutput": "both",
+            "gdbPath": "/usr/bin/gdb",
             /* Run `cargo build --example itm` and uncomment this line to run itm example */
             // "executable": "./target/thumbv7em-none-eabihf/debug/examples/itm",
             "device": "STM32F446RETx",
