--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rtic-monotonic = "1" # Monotonic timer for RTIC
 fugit = "0.3.6" # Time library for abstraction of time units
 heapless = "0.7.16" # Heapless data structures alternative to std
 bxcan = { version = "0.7.0", features = ["unstable-defmt"] } # CAN driver
+serde = { version = "1.0.152", default-features= false, features = ["derive"] } # Serialization framework
 
 [dependencies.cortex-m] # Cortex-M core peripherals
 version = "0.7.4"
